--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Habitify - Track Your Habits</title>
     <meta name="description" content="Habitify - A beautiful habit tracking app" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Kelvin Fameyeh" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
